[tool.poetry]
name = "teratail"
version = "0.1.0"
description = ""
authors = ["demerara151 <demeraraonfire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
playwright = "^1.30.0"
selectolax = "^0.3.14"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
