[tool.poetry]
name = "teratail"
version = "0.1.0"
description = ""
authors = ["demerara151 <demeraraonfire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.0"
selectolax = "^0.3.16"
selenium = "^4.13.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
